few touchups on index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 </a>
 <div class="header__burger">
   <div class="header__address">Greater Toronto Area, Ontario</div>
-  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+39 0434 540006</a>
+  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
   <div id="menu-toggle" class="circleCursor pelement">
     <div class="hamburger">
       <span></span>
@@ -557,7 +557,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     <br>
     720-7 Copeland St, East York, ON M4G 3E7
     <br>
-    <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
+    <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">+1 647 774 5321</a> -
     <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
     <br>
     <br>
@@ -578,15 +578,15 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
   "@type": "Organization",
   "address": {
     "@type": "PostalAddress",
-    "addressLocality": "Cordenons - PN - Italy",
-    "postalCode": "33084",
-    "streetAddress": "Via stradelle 234/B"
+    "addressLocality": "East York, ON",
+    "postalCode": "M4G 3E7",
+    "streetAddress": "720-7 Copeland St"
   },
   "email": "info@tappezzerianovecento.it",
-  "telephone": "+39 0434 540006",
+  "telephone": "+1 647 774 5321",
   "name": "Maxidom",
   "url" : "https://www.maxidom.ca/",
-  "vatID": "01750420935",
+  "BN": "01750420935",
   "logo": "https://www.maxidom.ca/img/share/logo.png"
 }
 </script>
