Developing thge flooring page

--- a/flooring.html
+++ b/flooring.html
@@ -110,6 +110,222 @@
 <body>
 
 
+    <!-- Message for users with JavaScript disabled -->
+<noscript><p style="position: relative; z-index: 999999; color: white;">Wait a minute... No Javascript?? It's like eating a pizza with pineapple. No way.</p></noscript>
+
+<!-- Custom cursor elements -->
+<div class="cursor"></div>
+<div class="cursor-follower"></div>
+
+<!-- Grid layout for the page -->
+<div class="grid">
+  <div class="grid__col">
+    <div class="grid__fill"></div>
+    <div class="grid__line"></div>
+  </div>
+  <div class="grid__col">
+    <div class="grid__fill"></div>
+    <div class="grid__line"></div>
+  </div>
+  <div class="grid__col">
+    <div class="grid__fill"></div>
+    <div class="grid__line"></div>
+  </div>
+  <div class="grid__col">
+    <div class="grid__fill"></div>
+    <div class="grid__line"></div>
+  </div>
+  <div class="grid__logo"></div>
+</div>
+
+<!-- Header section with logo, contact info, and navigation menu -->
+<header class="header">
+  <a href="">
+    <div class="header__logo"></div>
+  </a>
+  <div class="header__burger">
+    <div class="header__address">720-7 Copeland St, East York, ON M4G 3E7</div>
+    <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
+    <div id="menu-toggle" class="circleCursor pelement">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+      </div>
+      <div class="cross">
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+  </div>
+  <div class="header__menu">
+    <div class="header__menu__wrap">
+      <div class="container">
+        <div class="header__menu__left">
+          <ul>
+            <li>
+              <a href="the-process.html">Process</a>
+            </li>
+            <li>
+              <a href="products.html">Products</a>
+            </li>
+            <li>
+              <a href="services.html">Services</a>
+            </li>
+            <li>
+              <a href="contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div class="header__menu__right">
+          <div class="header__menu__info">
+            <div class="header__menu__label">ADDRESS:</div>
+            <div class="header__menu__text">Maxidom<br>720-7 Copeland St,<br>East York, ON M4G 3E7<br>Ontario</div>
+          </div>
+          <div class="header__menu__info">
+            <div class="header__menu__label">Service Areas:</div>
+            <div class="header__menu__text">Toronto</div>
+            <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
+            <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="grid">
+    <div class="grid__col">
+      <div class="grid__line"></div>
+    </div>
+    <div class="grid__col">
+      <div class="grid__line"></div>
+    </div>
+    <div class="grid__col">
+      <div class="grid__line"></div>
+    </div>
+    <div class="grid__col">
+      <div class="grid__line"></div>
+    </div>
+  </div>
+</header>
+
+<!-- Main content section with virtual scrolling -->
+<div class="vs-section">
+  <main id="barba-wrapper">
+    <div class="barba-container">
+
+      <!-- Page top section with parallax background -->
+      <section class="pageTop anim">
+        <div class="overflow-hidden">
+          <div class="pageTop__bg parallax" data-rellax-speed="-3" style="background-image:url('images/flooring2.jpg')"></div>
+          <div class="pageTop__container">
+            <div class="container">
+              <h1 class="pageTop__title">
+                Flooring Installation
+                <span class="reveal_title"></span>
+              </h1>
+              <div class="pageTop__subtitle">
+                Elegant, durable, and visually stunning
+                <span class="reveal_title two"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="products.html" class="backToProduct">Back to products</a>
+      </section>
+
+      <!-- Main product content section -->
+      <div class="product__content scrollTo">
+        <section class="product__mainImg product__mainImg--first section__generic section__generic--fullRight anim">
+          <div class="section__generic__imgContainer">
+            <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+              <div class="image lazyBg" data-src="'images/flooring.jpg'"></div>
+              <div class="imgPlaceholder"></div>
+            </div>
+          </div>
+          <div class="section__generic--content">
+            <h2 class="section__generic__title">Experience elegance underfoot</h2>
+            <div class="section__generic__text">From concept to installation, we support you at every step. With hardwood, vinyl, or laminate flooring, we ensure flawless installation. Enhance your home with durable, stylish options. Our skilled team delivers outstanding craftsmanship and personalized service to bring your vision to life.</div>
+          </div>
+        </section>
+        <div class="parallax-container parallax-container--center-top">
+          <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Inspirations</div>
+        </div>
+        <div class="product__imgGallery">
+          <div class="product__mainImg section__generic section__generic--fullLeft anim">
+            <div class="section__generic__imgContainer">
+              <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                <div class="image lazyBg" data-src="'images/flooring.jpg'"></div>
+                <div class="imgPlaceholder"></div>
+              </div>
+            </div>
+            <h3 class="section__generic__caption">Hardwood</h3>
+          </div>
+          <div class="parallax-container parallax-container--center-top">
+            <div class="parallax parallax-title" data-rellax-speed="3" data-rellax-percentage="0.3">Gallery</div>
+          </div>
+          <div class="product__mainImg section__generic section__generic--fullLeft anim">
+            <div class="section__generic__imgContainer">
+              <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                <div class="image lazyBg" data-src="'images/engineeredhardw.jpg'"></div>
+                <div class="imgPlaceholder"></div>
+              </div>
+            </div>
+            <h3 class="section__generic__caption">Engineering</h3>
+          </div>
+          <div class="product__mainImg section__generic section__generic--fullLeft anim">
+            <div class="section__generic__imgContainer">
+              <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                <div class="image lazyBg" data-src="'images/engineeredhardw.jpg'"></div>
+                <div class="imgPlaceholder"></div>
+              </div>
+            </div>
+          </div>
+          <div class="product__mainImg section__generic section__generic--fullLeft anim">
+            <div class="section__generic__imgContainer">
+              <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                <div class="image lazyBg" data-src="'images/engineeredhardw.jpg'"></div>
+                <div class="imgPlaceholder"></div>
+              </div>
+            </div>
+            <h3 class="section__generic__caption">Laminate</h3>
+          </div>
+          <div class="product__mainImg section__generic section__generic--fullLeft anim">
+            <div class="section__generic__imgContainer">
+              <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                <div class="image lazyBg" data-src="'images/flooring.jpg'"></div>
+                <div class="imgPlaceholder"></div>
+              </div>
+            </div>
+            <h3 class="section__generic__caption">Vinyl</h3>
+          </div>
+        </div>
+      </div>
+
+      <!-- Page bottom section with call-to-action -->
+      <section class="pageBottom anim linkTo">
+        <div class="pageBottom__bg parallax" data-rellax-speed="1" data-rellax-percentage="0.5">
+          <div class="pageBottom__bg__img lazyBg" data-src="'images/stairs2.jpg'"></div>
+        </div>
+        <div class="pageBottom__container">
+          <div class="container">
+            <div class="pageBottom__label">
+              You may be interested in:
+              <span class="reveal_title"></span>
+            </div>
+            <h3 class="pageBottom__title">
+              Stairs
+              <span class="reveal_title"></span>
+            </h3>
+            <div class="pageBottom__subtitle">
+              Transform your staircase into a stunning focal point 
+              <span class="reveal_title two"></span>
+            </div>
+            <div class="pageBottom__buttonWrap">
+              <a href="stairs.html" class="button pelement linkFrom">Scroll to explore</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
 <!-- Footer section with contact info -->
 <footer class="footer">
     <a href="">
