--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,145 @@
 </head>
 <body>
 
+  <!-- No JavaScript Warning -->
+  <noscript>
+    <p style="position: relative; z-index: 999999; color: white;">Wait a minute... No Javascript?? It's like eating a pizza with pineapple. No way.</p>
+  </noscript>
 
+  <!-- Cursor Effects -->
+  <div class="cursor"></div>
+  <div class="cursor-follower"></div>
+
+  <!-- Grid Background -->
+  <div class="grid">
+    <div class="grid__col"><div class="grid__fill"></div><div class="grid__line"></div></div>
+    <div class="grid__col"><div class="grid__fill"></div><div class="grid__line"></div></div>
+    <div class="grid__col"><div class="grid__fill"></div><div class="grid__line"></div></div>
+    <div class="grid__col"><div class="grid__fill"></div><div class="grid__line"></div></div>
+    <div class="grid__logo"></div>
+  </div>
+
+  <!-- Header Section -->
+  <header class="header">
+    <a href="">
+      <div class="header__logo"></div>
+    </a>
+    <div class="header__burger">
+      <div class="header__address">720-7 Copeland St, Toronto, ON M4G 3E7</div>
+      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">+1-647-774-5321</a>
+      <div id="menu-toggle" class="circleCursor pelement">
+        <div class="hamburger"><span></span><span></span></div>
+        <div class="cross"><span></span><span></span></div>
+      </div>
+    </div>
+    <div class="header__menu">
+      <div class="header__menu__wrap">
+        <div class="container">
+          <div class="header__menu__left">
+            <ul>
+              <li><a href="the-process.html">Process</a></li>
+              <li><a href="products.html">Products</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contacts.html">Contacts</a></li>
+            </ul>
+          </div>
+          <div class="header__menu__right">
+            <div class="header__menu__info">
+              <div class="header__menu__label">ADDRESS:</div>
+              <div class="header__menu__text">720-7 Copeland St,<br>Toronto, ON M4G 3E7</div>
+            </div>
+            <div class="header__menu__info">
+              <div class="header__menu__label">Service Areas:</div>
+              <div class="header__menu__text">Toronto - Thornhill</div>
+              <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
+              <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="grid">
+      <div class="grid__col"><div class="grid__line"></div></div>
+      <div class="grid__col"><div class="grid__line"></div></div>
+      <div class="grid__col"><div class="grid__line"></div></div>
+      <div class="grid__col"><div class="grid__line"></div></div>
+    </div>
+  </header>
+
+  <!-- Main Content Section -->
+  <div class="vs-section">
+    <main id="barba-wrapper">
+      <div class="barba-container">
+
+        <!-- Page Top Section -->
+        <section class="pageTop anim">
+          <div class="overflow-hidden">
+            <div class="pageTop__bg parallax" data-rellax-speed="-3" style="background-image:url('images/phone.jpg')"></div>
+            <div class="pageTop__container">
+              <div class="container">
+                <h1 class="pageTop__title">Contacts<span class="reveal_title"></span></h1>
+                <div class="pageTop__subtitle">Tell us your needs and give us a call<span class="reveal_title two"></span></div>
+              </div>
+            </div>
+          </div>
+          <a class="scroll-hint goToPos" href="javascript:;" data-target=".scrollTo" data-offset="150">
+            <div class="scroll-hint__label">Scroll to explore</div>
+          </a>
+        </section>
+
+        <!-- Contacts Section -->
+        <div class="contacts scrollTo">
+          <section class="contacts__wrap">
+            <div class="section__generic anim">
+              <div class="container">
+                <div class="section__generic__imgContainer">
+                  <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                    <div id="map" class="map"></div>
+                    <div class="imgPlaceholder"></div>
+                  </div>
+                </div>
+                <div class="section__generic--content">
+                  <h2 class="section__generic__title">Come and see us</h2>
+                  <div class="section__generic__text">
+                    <strong>Maxidom</strong>
+                    <p>720-7 Copeland St, Toronto, ON M4G 3E7</p>
+                    <p>Tel: <a href="tel:+1 647 774 5321" target="_blank">+1 647 774 5321</a></p>
+                    <p>Email: <a href="mailto:stasma.sm17@gmail.com" target="_blank">stasma.sm17@gmail.com</a></p>
+                    <p><strong>Service Areas:</strong></p>
+                    <p>Toronto - Thornhill</p>
+                    <p>Markham - Richmond Hill - Vaughan</p>
+                    <p>King City - Aurora - Newmarket - Bradford</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="parallax-container parallax-container--center-top">
+              <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Service Area</div>
+            </div>
+          </section>
+          <section class="contacts__wrap">
+            <div class="section__generic section__generic--fullRight anim">
+              <div class="section__generic__imgContainer">
+                <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
+                  <div class="image lazyBg" data-src="images/email.jpg"></div>
+                  <div class="imgPlaceholder"></div>
+                </div>
+              </div>
+              <div class="section__generic--content">
+                <h2 class="section__generic__title">...or write us an email</h2>
+                <div class="section__generic__text">
+                  <p>For any doubts, information or to request a quote, do not hesitate to write me an email, I will reply as soon as possible.</p>
+                </div>
+                <div class="contacts__buttonWrap">
+                  <a class="button pelement ga-events" data-eventcategory="Mail from contact" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">Write us an email</a>
+                </div>
+              </div>
+            </div>
+            <div class="parallax-container parallax-container--center-top">
+              <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Contact me</div>
+            </div>
+          </section>
+        </div>
 
   <!-- Footer Section -->
   <footer class="footer">
