Updated the index.html

--- a/cabinetry.html
+++ b/cabinetry.html
@@ -222,7 +222,7 @@
                 <span class="reveal_title"></span>
               </h1>
               <div class="pageTop__subtitle">
-                A touch of style for your home
+                Elegance blended with functionality
                 <span class="reveal_title two"></span>
               </div>
             </div>
