--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta name="description" content="Maxidom: Finishing Carpentry Services">
 
   <!-- Open Graph Meta Tags for social media sharing -->
-  <meta property="og:site_name" content="Maxidom: Finishing Carpentry, Cabinetry, flooring, Stairs, Repairs">
-  <meta property="og:title" content="Maxidom: Finishing Carpentry, Cabinetry, flooring, Stairs, Repairs">
+  <meta property="og:site_name" content="Maxidom: Finishing Carpentry, Cabinetry, Flooring, Stairs, Repairs">
+  <meta property="og:title" content="Maxidom: Finishing Carpentry, Cabinetry, Flooring, Stairs, Repairs">
   <meta property="og:description" content="Maxidom: An Interior Carpentry Finishing company excels in trim work, door installation, cabinetry, flooring, and stairs refinishing.">
   <meta name="twitter:title" content="Maxidom: Finishing Carpentry, Cabinetry, flooring, Stairs, Repairs">
   <meta name="twitter:description" content="Maxidom: 
@@ -71,6 +71,10 @@
 <!-- CSS Stylesheets -->
 <link href="css/site.css" rel="stylesheet">
 
+<!-- Font Awesome for Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 <!-- Google Analytics -->
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-46667632-1"></script>
 <script>
@@ -114,7 +118,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <div class="header__menu__left">
         <ul>
             <li>
-              <a href="the-process.html">How we work</a>
+              <a href="the-process.html">Process</a>
             </li>
             <li>
               <a href="products.html">Products</a>
@@ -130,11 +134,11 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <div class="header__menu__right">
         <div class="header__menu__info">
           <div class="header__menu__label">ADDRESS:</div>
-          <div class="header__menu__text">Maxidom<br>720-7 Copeland St,<br>East York, ON M4G 3E7<br>Ontario</div>
+          <div class="header__menu__text">720-7 Copeland St,<br>Toronto, ON M4G 3E7</div>
         </div>
          <div class="header__menu__info">
             <div class="header__menu__label">Service Areas:</div>
-            <div class="header__menu__text">Toronto</div>
+            <div class="header__menu__text">Toronto - Thornhill</div>
             <div class="header__menu__text">Markham - Richmond Hill - Vaughan</div>
             <div class="header__menu__text">King City - Aurora - Newmarket - Bradford</div>
           </div>
@@ -283,7 +287,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 
      <!-- Slide 4: Stairs -->
     <article class="slide">
-      <div class="slide__bg" style="background-image: url('images/stairs2.jpg')"></div>
+      <div class="slide__bg" style="background-image: url('images/stairs3.jpg')"></div>
       <div class="container slide__container">
         <div class="slide__left">
           <div class="slide__line"></div>
@@ -350,7 +354,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 <div class="section__generic section__generic--fullRight anim">
   <div class="section__generic__imgContainer">
     <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
-      <div class="image lazyBg" data-src="images/design2.jpeg"></div>
+      <div class="image lazyBg" data-src="images/design4.jpeg"></div>
       <div class="imgPlaceholder"></div>
     </div>
   </div>
@@ -449,7 +453,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     </article>
     <article class="carousel__item circleCursor">
       <div class="carousel__imgContainer">
-        <img class="carousel__img tns-lazy-img" data-src="images/staircase2.jpg">
+        <img class="carousel__img tns-lazy-img" data-src="images/stairs3.jpg">
       </div>
       <div class="carousel__content">
         <h3 class="carousel__title">
@@ -525,7 +529,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
         </div>
         <div class="home__service__col home__service__col--offset">
           <h3 class="home__service__title">Installation</h3>
-          <div class="home__service__text">Through meticulous planning and execution, every installation is tailored to meet the unique requirements and preferences of the customer. Attention to detail ensures each element is flawlessly integrated, resulting in a seamless and functional addition to the space. Professional craftsmanship transforms designs into reality, ensuring satisfaction and enduring quality.</div>
+          <div class="home__service__text">Every installation is tailored to meet customer requirements and preferences through meticulous planning and execution. Attention to detail ensures flawless integration, resulting in a seamless and functional addition to the space. Professional craftsmanship transforms designs into reality, ensuring satisfaction and enduring quality.</div>
         </div>
       </article>
     <div class="home__service__buttonWrap">
@@ -611,9 +615,9 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     <div class="footer__logo"></div>
   </a>
   <div class="footer__text">
-    Maxidom by Stas Morozan - 647-774-5321
+    Maxidom by Stanislav Morozan 
     <br>
-    720-7 Copeland St, East York, ON M4G 3E7
+    720-7 Copeland St, Toronto, ON M4G 3E7
     <br>
     <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
     <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
@@ -621,11 +625,16 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     <br>
     <a href="privacy.html" target="_blank">Privacy policy</a> - 
     <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
-    <div class="fb-link">
-      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank"></a>
-    </div>
-    <div class="ig-link">
-      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom" href="https://www.instagram.com/maxidom" target="_blank"></a>
+    <!-- Social Links -->
+    <div class="social-links">
+      <!-- Facebook Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+        <i class="fab fa-facebook"></i>
+      </a>
+      <!-- Instagram Link -->
+      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://instagram.com/stas_moozan" href="https://instagram.com/stas_moozan" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
     </div>
     
   </div>
