updated the process page

--- a/the-process.html
+++ b/the-process.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class="no-js" lang="it" dir="ltr"><head>
+<!DOCTYPE html><html class="no-js" lang="en" dir="ltr"><head>
   <title>How we Work | Maxidom</title>
   <meta name="description" content="Maxidom: Finishing Carpentry Services">
    <!-- Open Graph Meta Tags for social media sharing -->
@@ -24,7 +24,7 @@
   <meta name="theme-color" content="#272727">
   <meta property="og:url" content="https://www.maxidom.ca/">
   <meta property="og:type" content="website">
-  <meta property="og:locale" content="it_IT">
+  <meta property="og:locale" content="en_EN">
   <meta property="og:image" content="images/facebook.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
@@ -40,6 +40,7 @@
 
 <!-- Font Awesome for Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
 
 <!-- Google Analytics -->
@@ -87,8 +88,8 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
   <div class="header__logo"></div>
 </a>
 <div class="header__burger">
-  <div class="header__address">720-7 Copeland St, Toronto, ON M4G 3E7</div>
-  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
+  <div class="header__address">Great Toronto Area, Ontario</div>
+  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">647-774-5321</a>
   <div id="menu-toggle" class="circleCursor pelement">
     <div class="hamburger">
       <span></span>
@@ -181,13 +182,13 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <div class="container">
         <div class="section__generic__imgContainer">
           <div class="section__generic__imgWrapper parallax" data-rellax-speed="-3" data-rellax-percentage="0.5">
-            <div class="image image--left lazyBg" data-src="./images/personal.jpg"></div>
+            <div class="image image--left lazyBg" data-src="./images/profile.jpg"></div>
             <div class="imgPlaceholder"></div>
           </div>
         </div>
         <div class="section__generic--content">
           <h2 class="section__generic__title">"Providing the customer with the best service is the basis of my work"</h2>
-          <div class="section__generic__text">Stas Morozan, we are a fine finish carpentry company working on custom homes around GTA, Ontario. We work closely on a daily basis with builders, designers, architects and homeowners to exceed their expectations of what quality looks like. We take pride in our work and never leave your job until you are in love with your place.</div>
+          <div class="section__generic__text">We are a distinguished finish carpentry company specializing in custom homes throughout the GTA, Ontario. At Maxidom, we provide a wide variety of custom wood and millwork services and have seen steady, consistent growth over our years in business. Our values remain the same today—we offer reliable and dependable service, backed by our undeniably committed work ethic and integrity. Collaborating daily with builders, designers, architects, and homeowners, we strive to surpass their expectations of excellence. We take immense pride in our craftsmanship and ensure your complete satisfaction before we consider the job done.</div>
         </div>
       </div>
     </div>
@@ -316,16 +317,17 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       <div class="footer__logo"></div>
     </a>
     <div class="footer__text">
-      Maxidom by Stas Morozan 
+      Maxidom by Stas Morozan
       <br>
       720-7 Copeland St, Toronto, ON M4G 3E7
       <br>
-      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
+      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
       <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
       <br>
       <br>
-      <a href="privacy.html" target="_blank">Privacy policy</a> - 
+      <a href="privacy.html" target="_blank">Privacy policy</a> -
       <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
+      
       <!-- Social Links -->
       <div class="social-links">
         <!-- Facebook Link -->
@@ -333,11 +335,10 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
           <i class="fab fa-facebook"></i>
         </a>
         <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://instagram.com/stas_moozan" href="https://instagram.com/stas_moozan" target="_blank">
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </div>
-      
     </div>
   </footer>
   
