updated the contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -89,8 +89,8 @@
       <div class="header__logo"></div>
     </a>
     <div class="header__burger">
-      <div class="header__address">720-7 Copeland St, Toronto, ON M4G 3E7</div>
-      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">+1-647-774-5321</a>
+      <div class="header__address">Greater Toronto Area, Ontario</div>
+      <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a>
       <div id="menu-toggle" class="circleCursor pelement">
         <div class="hamburger"><span></span><span></span></div>
         <div class="cross"><span></span><span></span></div>
@@ -167,7 +167,7 @@
                   <div class="section__generic__text">
                     <strong>Maxidom</strong>
                     <p>720-7 Copeland St, Toronto, ON M4G 3E7</p>
-                    <p>Tel: <a href="tel:+1 647 774 5321" target="_blank">+1 647 774 5321</a></p>
+                    <p>Tel: <a href="tel:+1 647 774 5321" target="_blank"> 647-774-5321</a></p>
                     <p>Email: <a href="mailto:stasma.sm17@gmail.com" target="_blank">stasma.sm17@gmail.com</a></p>
                     <p><strong>Service Areas:</strong></p>
                     <p>Toronto - Thornhill</p>
@@ -192,7 +192,7 @@
               <div class="section__generic--content">
                 <h2 class="section__generic__title">...or write us an email</h2>
                 <div class="section__generic__text">
-                  <p>For any doubts, information or to request a quote, do not hesitate to write me an email, I will reply as soon as possible.</p>
+                  <p>For any questions, additional information, or to request a quote, please feel free to email us. We will reply as soon as possible.</p>
                 </div>
                 <div class="contacts__buttonWrap">
                   <a class="button pelement ga-events" data-eventcategory="Mail from contact" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">Write us an email</a>
@@ -200,95 +200,95 @@
               </div>
             </div>
             <div class="parallax-container parallax-container--center-top">
-              <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Contact me</div>
+              <div class="parallax parallax-title" data-rellax-speed="2" data-rellax-percentage="0.3">Contact us</div>
             </div>
           </section>
         </div>
 
-  <!-- Footer Section -->
-  <footer class="footer">
-    <a href="">
-      <div class="footer__logo"></div>
-    </a>
-    <div class="footer__text">
-      Maxidom by Stas Morozan
-      <br>
-      720-7 Copeland St, Toronto, ON M4G 3E7
-      <br>
-      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
-      <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
-      <br>
-      <br>
-      <a href="privacy.html" target="_blank">Privacy policy</a> -
-      <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
-      
-      <!-- Social Links -->
-      <div class="social-links">
-        <!-- Facebook Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <!-- Instagram Link -->
-        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://instagram.com/stas_moozan" href="https://instagram.com/stas_moozan" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
+        <!-- Footer Section -->
+        <footer class="footer">
+          <a href="">
+            <div class="footer__logo"></div>
+          </a>
+          <div class="footer__text">
+            Maxidom by Stas Morozan
+            <br>
+            720-7 Copeland St, Toronto, ON M4G 3E7
+            <br>
+            <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
+            <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
+            <br>
+            <br>
+            <a href="privacy.html" target="_blank">Privacy policy</a> -
+            <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
+            
+            <!-- Social Links -->
+            <div class="social-links">
+              <!-- Facebook Link -->
+              <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <!-- Instagram Link -->
+              <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </footer>
+
       </div>
-    </div>
-  </footer>
+    </main>
+  </div>
 
-</div>
-</main>
-</div>
-
-<!-- Schema.org JSON-LD Markup for SEO -->
-<script type="application/ld+json">
-{
-"@context": "http://schema.org",
-"@type": "Organization",
-"address": {
-  "@type": "PostalAddress",
-  "addressLocality": "East York, ON",
-  "postalCode": "M4G 3E7",
-  "streetAddress": "720-7 Copeland St"
-},
-"email": "stasma.sm17@gmail.com",
-"telephone": "+1 647 774 5321",
-"name": "Maxidom",
-"url" : "https://www.maxidom.ca/",
-"BN": "01750420935",
-"logo": "https://www.maxidom.ca/img/share/logo.png"
-}
-</script>
+  <!-- Schema.org JSON-LD Markup for SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "East York, ON",
+        "postalCode": "M4G 3E7",
+        "streetAddress": "720-7 Copeland St"
+      },
+      "email": "stasma.sm17@gmail.com",
+      "telephone": "+1 647 774 5321",
+      "name": "Maxidom",
+      "url" : "https://www.maxidom.ca/",
+      "BN": "01750420935",
+      "logo": "https://www.maxidom.ca/img/share/logo.png"
+    }
+  </script>
 <!-- Custom JavaScript (if needed) -->
-<!-- Leaflet.js JavaScript -->
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script>
-// Initialize the map
-var map = L.map('map').setView([43.8561, -79.3370], 9);
+ <!-- Leaflet.js JavaScript -->
+ <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+ <script>
+     // Initialize the map
+     var map = L.map('map').setView([43.8561, -79.3370], 9);
 
-// Add OpenStreetMap tiles
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-   attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-}).addTo(map);
+     // Add OpenStreetMap tiles
+     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+     }).addTo(map);
 
-// Add markers for service areas
-var locations = [
-   { lat: 43.6532, lng: -79.3832, name: "Toronto" },
-   { lat: 43.8130, lng: -79.3560, name: "Thornhill" },
-   { lat: 43.8561, lng: -79.3370, name: "Markham" },
-   { lat: 43.8372, lng: -79.4245, name: "Richmond Hill" },
-   { lat: 43.8390, lng: -79.5080, name: "Vaughan" },
-   { lat: 43.9250, lng: -79.4459, name: "King City" },
-   { lat: 43.9982, lng: -79.4637, name: "Aurora" },
-   { lat: 44.0521, lng: -79.4559, name: "Newmarket" },
-   { lat: 44.1142, lng: -79.5602, name: "Bradford" }
-];
+     // Add markers for service areas
+     var locations = [
+         { lat: 43.6532, lng: -79.3832, name: "Toronto" },
+         { lat: 43.8130, lng: -79.3560, name: "Thornhill" },
+         { lat: 43.8561, lng: -79.3370, name: "Markham" },
+         { lat: 43.8372, lng: -79.4245, name: "Richmond Hill" },
+         { lat: 43.8390, lng: -79.5080, name: "Vaughan" },
+         { lat: 43.9250, lng: -79.4459, name: "King City" },
+         { lat: 43.9982, lng: -79.4637, name: "Aurora" },
+         { lat: 44.0521, lng: -79.4559, name: "Newmarket" },
+         { lat: 44.1142, lng: -79.5602, name: "Bradford" }
+     ];
 
-locations.forEach(function(location) {
-   L.marker([location.lat, location.lng]).addTo(map)
-       .bindPopup(location.name);
-});
-</script>
-<script src="js/site.js"></script>
+     locations.forEach(function(location) {
+         L.marker([location.lat, location.lng]).addTo(map)
+             .bindPopup(location.name);
+     });
+ </script>
+  <script src="js/site.js"></script>
 </body>
-</html>   
+</html>
