--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
 </a>
 <div class="header__burger">
   <div class="header__address">Greater Toronto Area, Ontario</div>
-  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">+1 647 774 5321</a>
+  <a class="header__tel ga-events" data-eventcategory="Phone track header" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:647-774-5321">647-774-5321</a>
   <div id="menu-toggle" class="circleCursor pelement">
     <div class="hamburger">
       <span></span>
@@ -247,7 +247,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
         </div>
         <div class="slide__right">
           <div class="tilt" data-tilt="" data-tilt-glare="true" data-tilt-maxglare="0.1" data-tilt-max="5" data-tilt-perspective="1000" data-tilt-scale="1.02" data-tilt-speed="2500" data-tilt-transition="true">
-            <img src="images/Kitchen.jpg" required="true" alt="Immagine Maxidom">
+            <img src="images/kitchen4.jpg" required="true" alt="Immagine Maxidom">
             <div class="imgPlaceholder"></div>
           </div>
           <!-- <div class="slide__bigtitle">Tende da sole</div> -->
@@ -442,11 +442,11 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
       </div>
       <div class="carousel__content">
         <h3 class="carousel__title">
-          <a href="wall-panel.html">Wall Paneling</a>
+          <a href="wall-paneling.html">Wall Paneling</a>
           <span class="reveal_title"></span>
         </h3>
         <div class="carousel__subtitle">
-          The accent that elevates your space's charm
+          The accent that updates your space's charm
           <span class="reveal_title two"></span>
         </div>
       </div>
@@ -547,8 +547,8 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     </div>
   </div>
   <div class="section__generic--content">
-    <h1 class="section__generic__title">MAXIDOM... <br>Elegant Finishing Carpentry</h1>
-    <div class="section__generic__text">An Interior Carpentry Finishing company excels in trim work, door installation, cabinetry, flooring, and stairs refinishing.Turning ideas into personalized creations through evaluation of requests, dimensions, and finishes. Meticulous planning and execution ensure each installation meets unique needs, with flawless integration and professional craftsmanship for enduring quality and satisfaction.</div>
+    <h1 class="section__generic__title"><br>Custom Finishing Carpentry</h1>
+    <div class="section__generic__text">An Interior Finishing Carpentry company that excels in trim work, door installation, cabinetry, flooring, and stairs refinishing.Turning ideas into personalized creations through evaluation of requests, dimensions, and finishes. Meticulous planning and execution ensure each installation meets unique needs, with flawless integration and professional craftsmanship for enduring quality and satisfaction.</div>
   </div>
 </div>
 <div class="parallax-container parallax-container--top-right">
@@ -609,40 +609,41 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
   </div>
 </section>
 
- <!-- Footer section -->
-  <footer class="footer">
-  <a href="">
-    <div class="footer__logo"></div>
-  </a>
-  <div class="footer__text">
-    Maxidom by Stanislav Morozan 
-    <br>
-    720-7 Copeland St, Toronto, ON M4G 3E7
-    <br>
-    <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+164777453231">+1 6477 745 3231</a> -
-    <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
-    <br>
-    <br>
-    <a href="privacy.html" target="_blank">Privacy policy</a> - 
-    <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
-    <!-- Social Links -->
-    <div class="social-links">
-      <!-- Facebook Link -->
-      <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <!-- Instagram Link -->
-      <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://instagram.com/stas_moozan" href="https://instagram.com/stas_moozan" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
+   <!-- Footer Section -->
+   <footer class="footer">
+    <a href="">
+      <div class="footer__logo"></div>
+    </a>
+    <div class="footer__text">
+      Maxidom by Stas Morozan
+      <br>
+      720-7 Copeland St, Toronto, ON M4G 3E7
+      <br>
+      <a class="ga-events" data-eventcategory="Phone track footer" data-eventaction="Click to call" data-eventlabel="6477745321" href="tel:+16477745321">647-774-5321</a> 
+      <a class="ga-events" data-eventcategory="Mail from footer" data-eventaction="Click to action" data-eventlabel="stasma.sm17@gmail.com" href="mailto:stasma.sm17@gmail.com">stasma.sm17@gmail.com</a>
+      <br>
+      <br>
+      <a href="privacy.html" target="_blank">Privacy policy</a> -
+      <a class="ga-events" data-eventcategory="Credits link" data-eventaction="Click to action" data-eventlabel="https://www.linkedin.com/in/stanislavmorozan/" href="https://www.linkedin.com/in/stanislavmorozan/" target="_blank" rel="noopener">Credits</a>
+      
+      <!-- Social Links -->
+      <div class="social-links">
+        <!-- Facebook Link -->
+        <a class="circleCursor ga-events" data-eventcategory="Facebook link" data-eventaction="Click to action" data-eventlabel="https://www.facebook.com/maxidom" href="https://www.facebook.com/maxidom" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <!-- Instagram Link -->
+        <a class="circleCursor ga-events" data-eventcategory="Instagram link" data-eventaction="Click to action" data-eventlabel="https://www.instagram.com/maxidom_max/" href="https://www.instagram.com/maxidom_max/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
     </div>
-    
-  </div>
-</footer>
+  </footer>
 
-    </div>
+</div>
 </main>
 </div>
+
 
 <script type="application/ld+json">
   {
@@ -658,7 +659,7 @@ gtag('config', 'UA-46667632-1', { 'anonymize_ip': true });
     "telephone": "+1 647 774 5321",
     "name": "Maxidom",
     "url" : "https://www.maxidom.ca/",
-    "BN": "01750420935",
+    "BN": "01252340935",
     "logo": "https://www.maxidom.ca/img/share/logo.png"
   }
 </script>
