updated teh contacts, crown, and doors pages content

--- a/contacts.html
+++ b/contacts.html
@@ -207,7 +207,7 @@
 
         <!-- Footer Section -->
         <footer class="footer">
-          <a href="">
+          <a href="index.html">
             <div class="footer__logo"></div>
           </a>
           <div class="footer__text">
